// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Breadcrumbs Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK dUykMD"
    >
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf llgkHU"
        width="100%"
      >
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK eTSHtc"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK liHVdE"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-hFrEEg iKIurY ftWzhq"
            />
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds dqCdat sc-hHLeRK iKIurY"
            >
              <a
                class="sc-eKBdFk eDgBSD sc-bUbCnL jeJqf"
                color="primary.main"
                href="/?path=/story/core-breadcrumbs--default"
                style="display: inherit;"
              >
                <div
                  class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK liHVdE"
                >
                  <div
                    class="sc-ivTmOn cSkHqN sc-cxabCf hcBkUF"
                  >
                    route 1
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds bElihy sc-hHLeRK hyikrs"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds bNJYtY sc-hHLeRK iKIurY"
            />
          </div>
        </div>
      </div>
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf llgkHU"
        width="100%"
      >
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK eTSHtc"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK liHVdE"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-hFrEEg iKIurY ftWzhq"
            />
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds dqCdat sc-hHLeRK iKIurY"
            >
              <a
                class="sc-eKBdFk eDgBSD sc-bUbCnL jeJqf"
                color="primary.main"
                href="/?path=/story/core-breadcrumbs--default"
                style="display: inherit;"
              >
                <div
                  class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK liHVdE"
                >
                  <div
                    class="sc-ivTmOn cSkHqN sc-cxabCf hcBkUF"
                  >
                    route 2
                  </div>
                </div>
              </a>
            </div>
          </div>
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds bElihy sc-hHLeRK hyikrs"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds bNJYtY sc-hHLeRK iKIurY"
            />
          </div>
        </div>
      </div>
      <div
        class="sc-ivTmOn fSbxau sc-cxabCf eERZHK"
        width="100%"
      >
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK eTSHtc"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK liHVdE"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-hFrEEg iKIurY kHqFwK"
            />
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds dqCdat sc-hHLeRK iKIurY"
            >
              <a
                class="sc-eKBdFk eDgBSD sc-bUbCnL jeJqf"
                color="primary.main"
                href="/?path=/story/core-breadcrumbs--default"
                style="display: inherit;"
              >
                <div
                  class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK liHVdE"
                >
                  <div
                    class="sc-gKXOVf QRSBg sc-iBkjds dLaGQT sc-hHLeRK iKIurY"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-recycle "
                      data-icon="recycle"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M180.2 243.1C185 263.9 162.2 280.2 144.1 268.8L119.8 253.6l-50.9 81.43c-13.33 21.32 2.004 48.98 27.15 48.98h32.02c17.64 0 31.98 14.32 31.98 31.96c0 17.64-14.34 32.05-31.98 32.05H96.15c-75.36 0-121.3-82.84-81.47-146.8L65.51 219.8L41.15 204.5C23.04 193.1 27.66 165.5 48.48 160.7l91.43-21.15C148.5 137.7 157.2 142.9 159.2 151.6L180.2 243.1zM283.1 78.96l41.25 66.14l-24.25 15.08c-18.16 11.31-13.57 38.94 7.278 43.77l91.4 21.15c8.622 1.995 17.23-3.387 19.21-12.01l21.04-91.43c4.789-20.81-17.95-37.05-36.07-25.76l-24.36 15.2L337.4 45.14c-37.58-60.14-125.2-60.18-162.8-.0617L167.2 56.9C157.9 71.75 162.5 91.58 177.3 100.9c14.92 9.359 34.77 4.886 44.11-10.04l7.442-11.89C241.6 58.58 270.9 59.33 283.1 78.96zM497.3 301.3l-16.99-27.26c-9.336-14.98-29.06-19.56-44.04-10.21c-14.94 9.318-19.52 29.15-10.18 44.08l16.99 27.15c13.35 21.32-1.984 49-27.14 49h-95.99l.0234-28.74c0-21.38-25.85-32.09-40.97-16.97l-66.41 66.43c-6.222 6.223-6.222 16.41 .0044 22.63l66.42 66.34c15.12 15.1 40.95 4.386 40.95-16.98l-.0234-28.68h95.86C491.2 448.1 537.2 365.2 497.3 301.3z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="sc-ivTmOn cSkHqN sc-cxabCf hcBkUF"
                  >
                    route 3 with icon
                  </div>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Breadcrumbs Wrapped 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds bnIlLs sc-hHLeRK iKIurY"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK dUykMD"
      >
        <div
          class="sc-ivTmOn dNJphr sc-cxabCf llgkHU"
          width="100%"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK eTSHtc"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK liHVdE"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-hFrEEg iKIurY ftWzhq"
              />
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds dqCdat sc-hHLeRK iKIurY"
              >
                <a
                  class="sc-eKBdFk eDgBSD sc-bUbCnL jeJqf"
                  color="primary.main"
                  href="/?path=/story/core-breadcrumbs--default"
                  style="display: inherit;"
                >
                  <div
                    class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK liHVdE"
                  >
                    <div
                      class="sc-ivTmOn cSkHqN sc-cxabCf hcBkUF"
                    >
                      route 1
                    </div>
                  </div>
                </a>
              </div>
            </div>
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds bElihy sc-hHLeRK hyikrs"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds bNJYtY sc-hHLeRK iKIurY"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-ivTmOn dNJphr sc-cxabCf llgkHU"
          width="100%"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK eTSHtc"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK liHVdE"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-hFrEEg iKIurY ftWzhq"
              />
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds dqCdat sc-hHLeRK iKIurY"
              >
                <a
                  class="sc-eKBdFk eDgBSD sc-bUbCnL jeJqf"
                  color="primary.main"
                  href="/?path=/story/core-breadcrumbs--default"
                  style="display: inherit;"
                >
                  <div
                    class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK liHVdE"
                  >
                    <div
                      class="sc-ivTmOn cSkHqN sc-cxabCf hcBkUF"
                    >
                      route 2
                    </div>
                  </div>
                </a>
              </div>
            </div>
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds bElihy sc-hHLeRK hyikrs"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds bNJYtY sc-hHLeRK iKIurY"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-ivTmOn fSbxau sc-cxabCf eERZHK"
          width="100%"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK eTSHtc"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK liHVdE"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-hFrEEg iKIurY kHqFwK"
              />
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds dqCdat sc-hHLeRK iKIurY"
              >
                <a
                  class="sc-eKBdFk eDgBSD sc-bUbCnL jeJqf"
                  color="primary.main"
                  href="/?path=/story/core-breadcrumbs--default"
                  style="display: inherit;"
                >
                  <div
                    class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK liHVdE"
                  >
                    <div
                      class="sc-gKXOVf QRSBg sc-iBkjds dLaGQT sc-hHLeRK iKIurY"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-recycle "
                        data-icon="recycle"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M180.2 243.1C185 263.9 162.2 280.2 144.1 268.8L119.8 253.6l-50.9 81.43c-13.33 21.32 2.004 48.98 27.15 48.98h32.02c17.64 0 31.98 14.32 31.98 31.96c0 17.64-14.34 32.05-31.98 32.05H96.15c-75.36 0-121.3-82.84-81.47-146.8L65.51 219.8L41.15 204.5C23.04 193.1 27.66 165.5 48.48 160.7l91.43-21.15C148.5 137.7 157.2 142.9 159.2 151.6L180.2 243.1zM283.1 78.96l41.25 66.14l-24.25 15.08c-18.16 11.31-13.57 38.94 7.278 43.77l91.4 21.15c8.622 1.995 17.23-3.387 19.21-12.01l21.04-91.43c4.789-20.81-17.95-37.05-36.07-25.76l-24.36 15.2L337.4 45.14c-37.58-60.14-125.2-60.18-162.8-.0617L167.2 56.9C157.9 71.75 162.5 91.58 177.3 100.9c14.92 9.359 34.77 4.886 44.11-10.04l7.442-11.89C241.6 58.58 270.9 59.33 283.1 78.96zM497.3 301.3l-16.99-27.26c-9.336-14.98-29.06-19.56-44.04-10.21c-14.94 9.318-19.52 29.15-10.18 44.08l16.99 27.15c13.35 21.32-1.984 49-27.14 49h-95.99l.0234-28.74c0-21.38-25.85-32.09-40.97-16.97l-66.41 66.43c-6.222 6.223-6.222 16.41 .0044 22.63l66.42 66.34c15.12 15.1 40.95 4.386 40.95-16.98l-.0234-28.68h95.86C491.2 448.1 537.2 365.2 497.3 301.3z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                    <div
                      class="sc-ivTmOn cSkHqN sc-cxabCf hcBkUF"
                    >
                      route 3 with icon
                    </div>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
